k8s/plausible-analytics/resources/deployment.yaml
# https://github.com/zekker6/helm-charts/tree/34b6a059b073/charts/apps/plausible-analytics

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible-analytics
  labels:
    app: plausible-analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plausible-analytics
  template:
    metadata:
      labels:
        app: plausible-analytics
    spec:
      containers:
        - name: analytics
          image: "ghcr.io/plausible/community-edition:v2.1.5"
          command:
            - /bin/sh
            - -c
            - sleep inf
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      volumes:
        - name: app-tmp
          emptyDir: { }
