k8s/plausible-analytics/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plausible-analytics
  namespace: plausible-analytics
spec:
  ports:
  - name: http
    targetPort: http
    port: 80
  selector:
    app: analytics
